# apis

./: .gitignore  Jenkinsfile  alembic.ini
alembic/: env.py
alembic/versions/: 9e7cb6e0da35_initial_tables.py
apis/: Jenkinsfile  main.py  pyproject.toml  secureapi.py  slatepractice.py
apis/apis/: main.py
apis/apis/db/: database.py  models.py
apis/db/: database.py  models.py
apis/pymodels/: models.py
apis/tests/: test_main.py
tests/: test_main.py
